# tracking-personal-expenses

./: .cursorignore  .gitignore  CLAUDE.md  Claude-Context-Refactor.md  Claude-Context.md  LICENSE  README.md  finance.db  package-lock.json  package.json  pyproject.toml  vite.config.js
.cursor/: SKILL.md
.cursor/agents/: finance-tester.md
.cursor/rules/: finance-tracker.mdc
backend/: database.py  main.py  models.py
backend/routers/: transactions.py
backend/templates/: index.html
src/: App.css  App.jsx  App.test.jsx  api.js  setupTests.js
src/components/: AddTransaction.jsx  ModalActions.jsx  Summary.jsx  Transactions.jsx  UpdateTransaction.jsx
