[project]
name = "temp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.11"
dependencies = [
    "fastapi>=0.115",
    "jinja2>=3.1",
    "mcp[cli]>=1.28.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.34",
]
